--- a/problem4.html
+++ b/problem4.html
@@ -2,7 +2,7 @@
     <h1 id="welcome"></h1>
 
     <form onsubmit="return checkAnswer(event)">
-        What is the Jhon favorite color?
+        What is the forth color of the rainbow?
         <p><input type="text" id="answer" name="answer" /></p>
         <p><input type="submit" value="Check Answer" /></p>
     </form>
@@ -27,8 +27,8 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({ 
-                    "id": "answer2",
-                    "data": document.getElementById("answer").value 
+                    "id": "answer1",
+                    "data": document.getElementById("answer4").value 
                 })
             })
             .then(response => response.json())
